# ColonyAI

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN-self-initiatives-v1.md  DESIGN-self-initiatives-v2.md  Dockerfile  LICENSE  NIGHTLOG.md  README.md  TODOs.md  colony-delivery-rate-limit.db  docker-compose.yml  openapi.json  openclaw.plugin.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
sidecar/: .dockerignore  Dockerfile  chain.db  colony-goals.db  export_openapi.py  genesis.json  pyproject.toml  pytest.ini
sidecar/colony_sidecar/: __init__.py  backup.py  cli.py  doctor.py  migrations.py  seed.py  server.py  service_template.plist  setup.py  telemetry.py
sidecar/colony_sidecar/agent/: __init__.py  client.py  models.py
sidecar/colony_sidecar/agents/: __init__.py  models.py  store.py  (+1 more)
sidecar/docs/: audit-2026-04-18.md  autonomy-extraction-spec.md  open-items-plan.md
sidecar/events/: 000001.8bb3b3ca7eb34a559aac57fe33.json  000002.6536c8d406f146ddbaae2a1b0f.json  000003.554ec183c1cf4638b0a2b2417b.json  000004.090db100822241fd9c9b644f13.json
sidecar/scripts/: cleanup_graph_duplicates.py  cleanup_initiatives.py  test_fix.py  validate_memory_governance_integration.py
sidecar/tests/: conftest.py  test_adaptive_params.py  test_affect.py  test_agent_api.py  test_agent_bridge.py  test_agent_sdk.py  test_agent_sensor_loop.py  test_agent_snapshot.py  test_agent_store.py  test_approval_gate.py  test_assignment_engine.py  test_audit_cleanup.py  test_auth_coverage.py  test_authz_scope_api.py  test_autonomy_preset.py  test_backup.py  test_beliefs.py  test_bind_auth_guard.py  test_boundary_fail_closed.py  test_briefing_aggregators.py  test_causal_extract.py  test_causal_falsifiability.py  test_causal_maintenance.py  test_causal_policy.py  test_causal_query.py  test_causal_query_only_guard.py  test_chain_keys.py  test_channel_registry.py  test_channel_store.py  test_cognition.py  test_cognition_observability.py  test_colony_memory_provider.py  test_commitment_resolution.py  test_commitments.py  test_compression.py  test_condition_producer.py  test_connectors.py  test_consensus_byzantine.py  test_contact_timezone.py  test_contacts_intro.py  (+144 more)
(+549 files in other folders)
