[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colony-sidecar"
version = "0.1.0"
description = "Colony intelligence sidecar — harness-agnostic cognition server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "litellm>=1.40",
    "pydantic>=2.6",
    "aiosqlite>=0.19",
    "neo4j>=5.18",
    "httpx>=0.27",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
lancedb = ["lancedb>=0.6", "pyarrow>=14.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
colony = "colony_sidecar.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["colony_sidecar*"]
