[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colonyai"
version = "0.30.0"
description = "Colony intelligence sidecar — harness-agnostic cognition server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "litellm>=1.40",
    "pydantic>=2.6",
    "aiosqlite>=0.19",
    "neo4j>=5.18",
    "httpx>=0.27",
    "websockets>=12.0",
    "sentence-transformers>=3.0",
    "Pillow>=10.0",
    "cryptography>=42.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "lancedb>=0.10",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]
lancedb = ["lancedb>=0.6", "pyarrow>=14.0"]
postgres = ["asyncpg>=0.29"]
extraction = ["PyMuPDF>=1.24", "beautifulsoup4>=4.12"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27", "mcp[cli]>=1.0"]

[project.scripts]
colony = "colony_sidecar.cli:main"
colony-agent-bridge = "colony_sidecar.workers.agent_bridge:main"
colony-queue-worker = "colony_sidecar.workers.queue_worker:main"
colony-skills-sync = "colony_sidecar.workers.skills_sync:main"
colony-worker = "colony_sidecar.workers.colony_worker:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["colony_sidecar*"]

[tool.setuptools.package-data]
colony_sidecar = ["**/*.sql", "**/*.json", "**/*.yaml", "**/*.txt"]
